Fixed an issue with iframe popups getting too wide on iOS.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -970,6 +970,10 @@
         width: auto;
     }
 
+    .LayoutPopup > .Header h1 {
+        white-space: normal;
+    }
+
     .LayoutPopup fieldset.TableLike.FixedLabel > .Field,
     .LayoutPopup fieldset.TableLike.FixedLabel > .Row > .Field,
     .LayoutPopup fieldset.TableLike.FixedLabel > .Value,
